        * Remove duplicated [fsck] in log output of Fsck worker.

        * Finally trace why replicate acted weird sometimes. If a file was
          deleted while it still had rows in file_to_replicate, those rows
          became stale as they were not removed. Wire up FID::delete to remove
          the rows (not Store::delete_fidid as that is overridden in Postgres).

        * Handle HiRes gettimeofday correctly to get useful results. Arrays are
          important. This gives us correct timing output.

        * Handle input to log() correctly. Based on the implementation of
          Sys::Syslog::syslog(), produces no ugly warnings, and makes sure that
          printf stuff works nicely.

        * The unix_timestamp function belongs to the Store, not other classes.
          Need to add testcases for process_deletes and stats.

        * Using NULL during an INSERT for the AUTO_INCREMENT column does not
          work very well outside of MySQL. Pass the correct number of arguments
          to the INSERT instead.

        * Clean up all raw usages of UNIX_TIMETAMP() function, in preparation
          for database independence. If you need the unix timestamp, include the output
          of $self->unix_timestamp directly into your query.

        * Alter $0 so that the scripts show up as '$SCRIPTNAME' in the process
          listing instead of '/usr/bin/perl $SCRIPTNAME'. This makes init.d
          scripts easier to manage.

        * make mogstored's lighttpd config use mod_status for "/", so
          mogadm doesn't think it's dead when it previously saw a 404
          (Justin Huff <jjhuff@mspin.net>)

        * remove Linux::AIO support, now that Perlbal has removed it as well,
          and because Linux::AIO support (when Perlbal then chooses
          IO::AIO) was hanging mogstored on shutdown.  so also add a
          mogstored shutdown test (after a full daemonization of it)

        * make Mgd::validate_dbh() re-check/ping slave dbhs as well.